--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>About - My Cool Website</title>
+      <title>My Cool Website</title>
    </head>
    <body>
-      <h1>About my website! 🎙</h1>
-      <p>Thanks for following this tutorial. 🙏</p>
+      <h1>Welcome to my website! ⭐️</h1>
+      <p>How was your day? 🎉</p>
+      <a href="./about">Read the about page</a>
    </body>
 </html>
